--- a/ca2/web/signup.xhtml
+++ b/ca2/web/signup.xhtml
@@ -1,12 +1,39 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-    </h:body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:f="http://java.sun.com/jsf/core">
+
+<h:head>
+    <title>Registration Page</title>
+</h:head>
+<h:body>
+    <f:view>
+        <h:form>
+            <table>
+                <tr>
+                    <td><h:outputText value="User Name:" /></td>
+                    <td><h:inputText id="fname" value="#{signUpView.userId}"
+                            required="true" requiredMessage="Please enter your username" /></td>
+                    <td><h:message for="fname" style="color:red" /></td>
+                </tr>
+                <tr>
+                    <td><h:outputText value="Password:" /></td>
+                    <td><h:inputSecret id="lname" value="#{signUpView.password}"
+                            required="true" requiredMessage="Please enter your password" /></td>
+                    <td><h:message for="lname" style="color:red" /></td>
+                </tr>
+                
+                <tr>
+                    <td />
+                    <td><h:commandButton value="Register" action="#{signUpView.add()}" /></td>
+                </tr>
+                <tr>
+                    <td><h:outputLink value="index.xhtml">Login</h:outputLink></td>
+                </tr>
+            </table>
+        </h:form>
+    </f:view>
+</h:body>
+</html>
