--- a/ca2/web/index.xhtml
+++ b/ca2/web/index.xhtml
@@ -1,27 +1,32 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
-<h:head>
-	<title>login</title>
-</h:head>
-<h:body>
-	<h:form>
-		<h3>Login Form</h3>
-		<h:outputText value="Username" />
-		<h:inputText id="username" value="#{login.user}"></h:inputText>
-		<h:message for="username"></h:message>
-		<br></br><br></br>
-		
-		<h:outputText value="Password" />
-		<h:inputSecret id="password" value="#{login.pwd}"></h:inputSecret>
-		<h:message for="password"></h:message>
-		<br></br><br></br>
-		
-		<h:commandButton action="#{login.validateUsernamePassword}"
-			value="Login"></h:commandButton>
+      xmlns:h="http://java.sun.com/jsf/html">
+    <h:head>
+        <title>Login</title>
+    </h:head>
+    <h:body>
+        <h:form>
+            <h1>Login</h1>
+            <hr />
+
+            <h:messages />
+            <h:panelGrid columns="2">
+                <h:outputText value="Username" />
+                <h:inputText id="username" 
+                             value="#{loginView.username}"></h:inputText>
+
+                <h:outputText value="Password" />
+                <h:inputSecret id="password" 
+                               value="#{loginView.password}"></h:inputSecret>
+
+                <h:panelGroup />
+                <h:commandButton action="#{loginView.login()}" 
+                                 value="Login"></h:commandButton>
                 
+                <h:panelGroup />
                 <h:link value="Sign Up" outcome="signup" />
-	</h:form>
-</h:body>
+            </h:panelGrid>
+        </h:form>
+    </h:body>
 </html>
