--- a/ca2/web/signup.xhtml
+++ b/ca2/web/signup.xhtml
@@ -11,7 +11,12 @@
 <h:body>
     <f:view>
         <h:form>
+             <tr>
+                     <td><h:outputText value="#{signUpView.message}" style="color:red" /></td>
+                     
+                </tr>
             <table>
+               
                 <tr>
                     <td><h:outputText value="User Name:" /></td>
                     <td><h:inputText id="fname" value="#{signUpView.userId}"
