--- a/ca2/web/display.html
+++ b/ca2/web/display.html
@@ -4,24 +4,48 @@
         <title>Notification Display</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script type="text/javascript">
-            $(function() {
-                var socket = new WebSocket("ws://localhost:8080/ca2/note/All");
-                socket.onmessage = function(evt) {
-                    var data = JSON.parse(evt.data);
+        <link rel="stylesheet" href="resources/css/bootstrap.css"/>
+        <link rel="stylesheet" href="resources/css/site.css"/>
 
-                    for(var i = 0; i < data.length; i++) {
-                        var obj = data[i];
-
-                        var title = obj.title;
-                        $("#notes").val(title + "\n" + $("#notes").val());
-                    }
-                }
-            })
-        </script>
+        <script src="resources/javascript/jquery-3.1.1.min.js"></script>
+        <script src="resources/javascript/dateFormat.js"></script>
+        <script src="resources/javascript/jquery.dateFormat.js"></script>
+        <script src="resources/javascript/note.js"></script>
     </head>
     <body>
-        <textarea id="notes" cols="50" rows="10" disabled></textarea>
+        <div class="container">
+            <div class="row" id="configuration">
+                <div class="col-md-10">
+                    <h1>Configure Board</h1>
+                    <form class="form-horizontal" action="#">
+                        <div class="form-group">
+                            <label for="category" class="col-sm-2 control-label">Select Category</label>
+                            <div class="col-sm-10">
+                                <select class="form-control" id="category">
+                                    <option>All</option>
+                                    <option>Social</option>
+                                    <option>For Sale</option>
+                                    <option>Jobs</option>
+                                    <option>Tuition</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-4">
+                                <input class="btn btn-primary" type="button" value="Start" id="start"/>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="row" id="noticeBoard" style="display: none;">
+                <div class="col-md-8" id="notes">
+                    <h1 id="title">Notice</h1>
+                    <ul class="posts list-unstyled">
+
+                    </ul>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
