--- a/ca2/web/secure/showNote.xhtml
+++ b/ca2/web/secure/showNote.xhtml
@@ -7,9 +7,14 @@
         <title>Note Display</title>
     </h:head>
     <h:body>
-		<h2>Your Notes</h2>
+        <h:form>
+		 <tr>
+                    <td><h:commandButton value="Refresh" action="#{noteView.show(userSession.username)}" /></td>
+                </tr>
 
 		<h2>Current list of notes</h2>
+                <!--<h:outputText value="Table is empty!" rendered="#{empty noteView.noteList}" />-->
+                
                 <h:dataTable var="t" value="#{noteView.noteList}" border="1">
 			<h:column>
 				<f:facet name="header">Title</f:facet>
@@ -32,6 +37,7 @@
 			</h:column>
 
 		</h:dataTable>
+                </h:form>
     </h:body>
 </html>
 
