add display board (web socket) html link at login page

--- a/ca2/web/index.xhtml
+++ b/ca2/web/index.xhtml
@@ -26,6 +26,8 @@
                 
                 <h:panelGroup />
                 <h:link value="Sign Up" outcome="signup" />
+                <h:panelGroup />
+                <h:link value="Display Board" outcome="display.html" />
             </h:panelGrid>
         </h:form>
     </h:body>
