add menu link at shownote page

--- a/ca2/web/secure/showNote.xhtml
+++ b/ca2/web/secure/showNote.xhtml
@@ -37,6 +37,10 @@
 			</h:column>
 
 		</h:dataTable>
+                
+                <h:panelGrid columns="1">
+                   <h:link value="Menu" outcome="menu" />
+                 </h:panelGrid>
                 </h:form>
     </h:body>
 </html>
