Adding menu link in create note page

--- a/ca2/web/secure/createNote.xhtml
+++ b/ca2/web/secure/createNote.xhtml
@@ -30,6 +30,9 @@
                 <h:panelGroup />
                 <h:commandButton value="Create Note" 
                                  action="#{createNoteView.create()}" />
+                
+                <h:panelGroup />
+                <h:link value="Menu" outcome="menu" />
             </h:panelGrid>
         </h:form>
     </h:body>
