--- a/ca2/web/secure/menu.xhtml
+++ b/ca2/web/secure/menu.xhtml
@@ -16,7 +16,7 @@
         <h:form>
             
         <h:panelGrid columns="1">
-            <h:commandLink value="Display My Note" action="#{noteView.show(userSession.username)}" />
+            <h:link value="Create Note" outcome="showNote" />
         </h:panelGrid>
         </h:form>
        
