Bug fix in View Note page

--- a/ca2/web/secure/menu.xhtml
+++ b/ca2/web/secure/menu.xhtml
@@ -16,7 +16,7 @@
         <h:form>
             
         <h:panelGrid columns="1">
-            <h:link value="Create Note" outcome="showNote" />
+            <h:link value="Display My Note" outcome="showNote" />
         </h:panelGrid>
         </h:form>
        
