--- a/ca2/web/secure/showNote.xhtml
+++ b/ca2/web/secure/showNote.xhtml
@@ -9,7 +9,7 @@
     <h:body>
         <h:form>
 		 <tr>
-                    <td><h:commandButton value="Refresh" action="#{noteView.show(userSession.username)}" /></td>
+                    <td><h:commandButton value="Refresh" action="#{noteView.show()}" /></td>
                 </tr>
 
 		<h2>Current list of notes</h2>
