display message after submit order

--- a/epod/web/makeorder.xhtml
+++ b/epod/web/makeorder.xhtml
@@ -12,7 +12,7 @@
     <f:view>
         <h:form>
              <tr>
-                     <td><h:outputText value="#{makeOverView.message}" style="color:red" /></td>
+                 <td><h:outputText value="#{makeOrderView.message}" style="color:red" /></td>
                      
                 </tr>
             <table>
