--- a/epod/web/makeorder.xhtml
+++ b/epod/web/makeorder.xhtml
@@ -43,6 +43,10 @@
                 </tr>
                
             </table>
+            
+             <h:panelGrid columns="1">
+            <h:link value="Display My Delivery" outcome="vieworder" />
+        </h:panelGrid>
         </h:form>
     </f:view>
 </h:body>
